fix white gap

--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ html {
 body {
     font-family:'Times New Roman', Times, serif;
     color: #827C79;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
 }
 
 /* img {
